--- a/css/style.css
+++ b/css/style.css
@@ -157,11 +157,15 @@ p
 	padding-right: 5px;
 	padding-left: 5px;
     background-color: #101010;
+	-moz-box-shadow: 0 0 10px 2px #FFFFFF;
+	-webkit-box-shadow: 0 0   10px 2px #FFFFFF;
+	box-shadow: 0 0 10px 2px #FFFFFF;
     max-width: 212px;
 	max-height: 35px;
 	-moz-border-radius: 4px;
 	-webkit-border-radius: 4px;
 	border-radius: 4px;
+	z-index: 50;
 }
 #uploadForm
 {
@@ -178,7 +182,7 @@ p
 	background-color: #101010;
 	font: bold 12px/18px sans-serif;
 	margin-left: 5px;
-	color: #FFFFFF;
+	color: #C8C8C8;
 	border: 0;
 	-moz-border-radius: 4px;
 	-webkit-border-radius: 4px;
@@ -186,7 +190,7 @@ p
 }
 #submit:hover
 {
-	color: red;
+	color: white;
 	cursor:pointer;
 	-webkit-transition: all 0.2s;
 	-moz-transition: all 0.2s;
@@ -199,7 +203,7 @@ p
 {
 	background-color: #303030;
 	font: bold 16px/18px sans-serif;
-	color: #FFFFFF;
+	color: #C8C8C8;
 	border: 0;
 	-moz-border-radius: 4px;
 	-webkit-border-radius: 4px;
@@ -209,7 +213,7 @@ p
 }
 #button:hover
 {
-	color: red;
+	color: white;
 	cursor:pointer;
 	-webkit-transition: all 0.2s;
 	-moz-transition: all 0.2s;
@@ -312,7 +316,7 @@ ul li:hover
 	background-position: center;
 	background-repeat: no-repeat;
 	display: inline-block;
-	height: 260px;
+	height: 290px;
 	width: 163px;
 	text-align: center;
 	white-space:nowrap;
@@ -324,16 +328,6 @@ ul li:hover
 {
 	cursor:pointer;
 }
-#PosterContainer:hover #movieInfo
-{
-	visibility: visible;
-	display: initial;
-}
-#movieInfo
-{
-	visibility: hidden;
-	display: none;
-}
 #posters
 {
 	background-color: #000000;
@@ -341,10 +335,10 @@ ul li:hover
 	width: 150px;
 	height: 222px;
 	margin-top: 4px;
+	margin-bottom: 0px;
 	-webkit-box-shadow: 5px 5px 5px 0px rgba(0,0,0,0.75);
 	-moz-box-shadow: 5px 5px 5px 0px rgba(0,0,0,0.75);
 	box-shadow: 5px 5px 5px 0px rgba(0,0,0,0.75);
-	bottom: 0;
 }
 /* Let's get this party started */
 ::-webkit-scrollbar {
@@ -372,7 +366,7 @@ ul li:hover
 #recentlyAddedWrapper
 {
     max-width:95%;
-    height:285px;
+    height:275px;
     margin: 0 auto;
 	white-space: nowrap;
 	background-color: #303030;
@@ -380,19 +374,20 @@ ul li:hover
 	-webkit-border-radius: 4px;
 	border-radius: 4px;
 	overflow-x: auto;
+	overflow-y: hidden;
 }
-#recentlyAddedWrapper2
+#recentlyAddedMovies
 {
     max-width:95%;
-    height:325px;
+    height:275px;
     margin: 0 auto;
 	white-space: nowrap;
 	background-color: #303030;
 	-moz-border-radius: 4px;
 	-webkit-border-radius: 4px;
 	border-radius: 4px;
-	overflow-x: -moz-scrollbars-none;
-	display: none;
+	overflow-x: auto;
+	overflow-y: hidden;
 }
 .tableDiv {
 	margin:0px;padding:0px;
@@ -487,12 +482,33 @@ ul li:hover
 select.list1
 {	
 	border: 0;
+	position: relative;
 	-moz-border-radius: 4px;
 	-webkit-border-radius: 4px;
 	border-radius: 4px;
     background-color: grey;
+	float: right;
+	z-index: 55;
 }
 select.list1:focus
 {
 	outline: none;
+}
+progress                        
+{
+    border: 0;
+	height: 5px;
+	width: 150px;
+	margin-left: 5px;
+    background-color: #202020;
+	margin-bottom: 10px;
+}
+progress[value]::-webkit-progress-bar {
+  background-color: #202020;
+}
+progress[value]::-webkit-progress-value {
+  background-color: red;
+}
+progress[value]::-moz-progress-bar {
+  background-color: red;
 }
