--- a/css/style.css
+++ b/css/style.css
@@ -392,8 +392,8 @@ ul li:hover
 	display: inline-block;
 	text-align: left;
 	width:100%;
+	left: 0;
     height:290px;
-    right: 10%;
 	white-space: nowrap;
 	background-color: #303030;
 	-moz-border-radius: 4px;
@@ -405,9 +405,9 @@ ul li:hover
 {
 	display: inline-block;
 	text-align: left;
+	left: 0px;
 	width:100%;
     height:290px;
-    right: 10%;
 	white-space: nowrap;
 	background-color: #303030;
 	-moz-border-radius: 4px;
@@ -579,3 +579,7 @@ progress[value]::-moz-progress-bar {
 {
 	outline: none;
 }
+button::-moz-focus-inner {
+  border: 0;
+}
+
